добавил родительский pom и версию java в дочернем pom

--- a/home_work_01/pom.xml
+++ b/home_work_01/pom.xml
@@ -2,38 +2,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+    	 
+    <!--определение родительского POM -->
+    <parent>
+        <groupId>com.patrushev</groupId>
+        <artifactId>Home_work</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+	
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.patrushev</groupId>
     <artifactId>home_work_01</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>home_work_01</name>
+	
+	<properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>27.0.1-jre</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.25</version>
-            <!--почему здесь пришлось закоментировать, чтобы программа не выдавала "Exception in thread "main" java.lang.NoClassDefFoundError: org/slf4j/LoggerFactory"-->
-            <!--<scope>test</scope>-->
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
+        </dependency>        
     </dependencies>
 
     <build>
