--- a/home_work_09_1_custom_orm/pom.xml
+++ b/home_work_09_1_custom_orm/pom.xml
@@ -20,4 +20,12 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.199</version>
+        </dependency>
+    </dependencies>
+
 </project>
