--- a/home_work_10_1_Hibernate_ORM/pom.xml
+++ b/home_work_10_1_Hibernate_ORM/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.4.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.patrushev</groupId>
+            <artifactId>home_work_06</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
