готовое дз 12 (веб сервер) с некоторыми оговорками. И еще куча рефакторинга, посоветованного идеей

--- a/home_work_12_Веб сервер/pom.xml
+++ b/home_work_12_Веб сервер/pom.xml
@@ -128,7 +128,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.patrushev.web_server.Main</mainClass>
+                            <mainClass>com.patrushev.web_server.HW121</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
