--- a/home_work_12_1_web_server/pom.xml
+++ b/home_work_12_1_web_server/pom.xml
@@ -19,6 +19,7 @@
         <json.path.version>3.3.0</json.path.version>
         <xml.path.version>3.3.0</xml.path.version>
         <freemarker.version>2.3.28</freemarker.version>
+        <junit.jupiter.version>5.3.2</junit.jupiter.version>
     </properties>
 
     <dependencies>
@@ -105,6 +106,24 @@
             <artifactId>home_work_10_1_Hibernate_ORM</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
